--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Yuliya Burankova"]
 
 [tool.poetry.dependencies]
 python = ">3.10,<3.12"
-featurecloud = "^0.0.25"
+featurecloud = ">0.0.28"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
