--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,34 @@
 *.zip
 *.txt
-*.csv
+# *.csv
 *.xls
 *.xlsx
-*.tsv
-*.png
+# *.tsv
 *.tiff
 *.html
 *.pdf
 *.docx
 *.pptx
 
+# simulated data
+data/simulated_data/balanced/data/*
+data/simulated_data/imbalanced/data/*
+data/simulated_data/mild_imbalanced/data/*
+evaluation/simulated/mild_imbalanced/results
+evaluation/simulated/imbalanced/results/*
+evaluation/simulated/balanced/results/*
+evaluation/simulated/mild_imbalanced/meta/*
+evaluation/simulated/imbalanced/meta/*
+evaluation/simulated/balanced/meta/*
+
+# raw MS data
+**/00_raw_data/*
+
 # MQ file
 *.params
 *.speclib
-*.fasta
+*).fasta
 data/bacterial_data/00_raw_data/README.md
-
 
 # R files
 *.Rproj
@@ -31,12 +43,22 @@ data/bacterial_data/00_raw_data/README.md
 *.log
 
 # config , axcept FedProt folder
-*.json
+# *.json
 *.yaml
-*.yml
+*test_*.yml
 # except FedProt folder
 !FedProt/
 
-
 # files in archive folders
 **/archive/*
+
+# ignore all figures except in ./figures/ folder
+*.png
+*.tiff
+# *.svg
+*.jpg
+!figures/*.png
+!figures/*.svg
+
+# temporary notebooks (ipynb with tmp in name)
+*tmp*.ipynb
