--- a/data/simulated_data/imbalanced/lab3/config.yml
+++ b/data/simulated_data/imbalanced/lab3/config.yml
@@ -3,7 +3,7 @@ fedprot:
   intensities: intensities.tsv
   sep: '\t'
   
-  use_smpc: true
+  use_smpc: false
   
   max_na_rate: 0.8
   log_transformed: true
@@ -11,6 +11,7 @@ fedprot:
   experiment_type: 'DIA'
   remove_single_pep_protein: false
   use_counts: false
+  remove_single_value_design: false
 
   only_shared_proteins: false
 
