--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,8 @@ data/bacterial_data/00_raw_data/README.md
 
 # temporary notebooks (ipynb with tmp in name)
 *tmp*.ipynb
+
+
+# do not ignore the following files : logo.jpg and states.png
+!logo2.jpg
+!states.png
