fixed SMPC config

--- a/data/TMT_data/01_smaller_lib_balanced_PG_MajorPG/Center1/config.yml
+++ b/data/TMT_data/01_smaller_lib_balanced_PG_MajorPG/Center1/config.yml
@@ -4,7 +4,8 @@ fedprot:
   intensities: pg_intensities.tsv
   sep: '\t'
   
-  use_smpc: false
+  # use_smpc: false
+  use_smpc: true
   
   max_na_rate: 0.8
   log_transformed: false
