--- a/data/simulated_data/imbalanced/lab1/config.yml
+++ b/data/simulated_data/imbalanced/lab1/config.yml
@@ -3,7 +3,8 @@ fedprot:
   intensities: intensities.tsv
   sep: '\t'
   
-  use_smpc: false
+  # use_smpc: false
+  use_smpc: true
   
   max_na_rate: 0.8
   log_transformed: true
